# agc_spec

./: .gitignore  .gitmodules  CMakeLists.txt  Jenkinsfile  README.md  audio_buffer.cc  audio_buffer.h  audio_buffer_unittest.cc  audio_processing_impl.cc  audio_processing_impl.h  common.h  cpplint.py  gain_control_impl.cc  gain_control_impl.h  gain_control_impl_webrtc.cc  gain_control_impl_webrtc.h  gain_control_unittest.cc  splitting_filter.cc  test.h  three_band_filter_bank.cc
api/: array_view.h
api/audio/: audio_frame.cc  audio_frame.h  audio_frame_unittest.cc
api/audio_codecs/: audio_format.h
api/units/: time_delta.cc  time_delta.h  time_delta_unittest.cc
api/video/: video_bitrate_allocation.cc
base/: arraysize.h  asyncinvoker-inl.h  asyncinvoker.cc  asyncinvoker.h  asyncpacketsocket.cc  asyncpacketsocket.h  asyncresolverinterface.cc  asyncresolverinterface.h  asyncsocket.cc  asyncsocket.h  asynctcpsocket.cc  asynctcpsocket.h  asynctcpsocket_unittest.cc  asyncudpsocket.cc  asyncudpsocket.h  asyncudpsocket_unittest.cc  atomicops.h  atomicops_unittest.cc  base64.cc  bind.h  bind_unittest.cc  buffer.h  buffer_unittest.cc  bufferqueue.cc  bufferqueue.h  byteorder.h  byteorder_unittest.cc  checks.cc  checks.h  constructormagic.h  copyonwritebuffer.cc  copyonwritebuffer.h  copyonwritebuffer_unittest.cc  criticalsection.cc  criticalsection.h  criticalsection_unittest.cc  deprecation.h  dscp.h  event.cc  event.h  (+140 more)
base/memory/: aligned_array.h  aligned_array_unittest.cc  aligned_malloc.cc  aligned_malloc_unittest.cc
base/numerics/: safe_compare.h  safe_compare_unittest.cc  safe_conversions.h  safe_conversions_impl.h  safe_minmax.h  safe_minmax_unittest.cc
base/strings/: audio_format_to_string.cc  string_builder.cc  string_builder.h  string_builder_unittest.cc
base/system/: inline.h  unused.h
common_audio/: CMakeLists.txt  audio_util.cc  audio_util.h  audio_util_unittest.cc  channel_buffer.cc  channel_buffer.h  channel_buffer_unittest.cc  copy_set_operations.c  division_operations.c  dot_product_with_scale.cc  resample.c  resample_48khz.c  resample_by_2.c  resample_by_2_internal.c  resample_fractional.c  signal_processing_library.c  signal_processing_library.h  sparse_fir_filter.cc  sparse_fir_filter.h  spl_sqrt.c  spl_sqrt_floor.c  splitting_filter.c  wav_file.cc  wav_file.h  wav_header.cc  wav_header.h
common_audio/resampler/: push_resampler.cc  push_resampler_unittest.cc  push_sinc_resampler.cc  push_sinc_resampler.h  push_sinc_resampler_unittest.cc  resampler.cc  resampler_unittest.cc  sinc_resampler.cc  sinc_resampler.h  sinc_resampler_unittest.cc  sinusoidal_linear_chirp_source.h
digital_agc/: CMakeLists.txt  analog_agc.c  analog_agc.h  digital_agc.c  digital_agc.h  gain_control.h  signal_processing_library.c  signal_processing_library.h
gtest_spec/: CMakeLists.txt  README.md  array_view_unittest.cc  test_spec.cc
include/: audio_processing.h  common_types.h
spec/: CMakeLists.txt  agc_spec.cc
system_wrappers/source/: cpu_features.cc
test/: audio_buffer_tools.cc  audio_buffer_tools.h  bitexactness_tools.cc  bitexactness_tools.h
test/testsupport/: fileutils.cc  fileutils_unittest.cc
tools/: input_audio_file.cc  input_audio_file.h  input_audio_file_unittest.cc
